force-app/main/default/objects/LLC_BI__Covenant_Type__c/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>This field is required and is manually populated. It identifies the category of the associated covenant record (such as Financial Requirements or Insurance Requirements). Finanical Statement Requirement and Financial Indicator covenants can be automatically tested using Spreads.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Statement Requirements</fullName>
            </value>
            <value>
                <fullName>Financial Indicators</fullName>
            </value>
            <value>
                <fullName>Term Covenants</fullName>
            </value>
            <value>
                <fullName>Default Covenants</fullName>
            </value>
            <value>
                <fullName>Collateral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>