force-app/main/default/objects/LLC_BI__Covenant_Type__c/fields/LLC_BI__Is_Financial_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Financial_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users manually select this optional checkbox field. This field is used to define Covenant Types as Financial Indicators. When users select this field, it allows for Financial Indicators to have a custom category. By default, this field is not selected.</description>
    <label>Financial Indicator</label>
    <type>Checkbox</type>
</CustomField>