force-app/main/default/objects/LLC_BI__Covenant_Type__c/fields/LLC_BI__Requirement_Template__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Requirement_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Administrators populate this optional lookup field to reference an associated Requirement Template so that Covenant Compliances can generate an associated Requirement.</description>
    <inlineHelpText>Populate this field with the Requirement Template needed to generate an associated Requirement. The template generates the Requirement, and links it to a Covenant Compliance created by the system.</inlineHelpText>
    <label>Requirement Template Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LLC_BI__Requirement__c.LLC_BI__Is_Template__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>LLC_BI__Requirement__c</referenceTo>
    <relationshipLabel>Covenant Types</relationshipLabel>
    <relationshipName>Covenant_Types</relationshipName>
    <type>Lookup</type>
</CustomField>